--- a/templates/question.html
+++ b/templates/question.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'layouts/base.html' %}
+{% load static %}
+{% block content %}
 
-</body>
-</html>
+{% include 'components/question-item.html' %}
+
+{% endblock %}
