--- a/askme_kamalov/templates/ask.html
+++ b/askme_kamalov/templates/ask.html
@@ -1,3 +1,7 @@
+{% extends 'layouts/base.html' %}
+{% load static %}
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -54,3 +58,5 @@
 <script src="../static/js/bootstrap.js" ></script>
 </body>
 </html>
+
+{% endblock %}
