--- a/askme_kamalov/templates/layouts/base.html
+++ b/askme_kamalov/templates/layouts/base.html
@@ -37,9 +37,9 @@
                 </button>
           </div>
           <div class="col-4">
-                <form class="d-flex">
+                <form class="d-flex" action="{% url 'ask' %}">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-success" type="submit">ASK!</button>
+                    <button class="btn btn-success"  type="submit">ASK!</button>
                 </form>
           </div>
           <div class="col-4">
