--- a/askme_kamalov/templates/components/answer-item.html
+++ b/askme_kamalov/templates/components/answer-item.html
@@ -5,9 +5,9 @@
                <div class="like-counter">
                    <div class="col-7">
                        <div class="rating-display">
-                           <div class="input-group mb-3">
-                          <span class="input-group-text" id="basic-addon1">5</span>
-                           </div>
+
+                          <span class="input-group-text" id="basic-addon1"> <b class="like-display-field">0</b></span>
+
                        </div>
                    </div>
                    <div class="col-5">
