--- a/askme_kamalov/templates/registration.html
+++ b/askme_kamalov/templates/registration.html
@@ -1,27 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-   <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
-    <!-- Custom styles for this template -->
-    <link href="../static/css/main.css" rel="stylesheet">
-  </head>
-<body>
+{% extends 'layouts/base.html' %}
+{% load static %}
+{% block content %}
 
 <h1>Registration</h1>
  <div class="wrong-pass">Sorry, your email address has been already registered!</div>
@@ -70,8 +49,5 @@
     </div>
   </div>
 
+{% endblock %}
 
-
-<script src="../static/js/bootstrap.js" ></script>
-</body>
-</html>
