--- a/askme_kamalov/templates/tag.html
+++ b/askme_kamalov/templates/tag.html
@@ -5,4 +5,11 @@
         <h1>Tag: {{tag.name}}</h1>
     </div>
 
+{% for question in questions %}
+
+{% include 'components/question-item.html' %}
+
+{% endfor %}
+
+
 {% endblock %}
