--- a/askme_kamalov/templates/components/paginator.html
+++ b/askme_kamalov/templates/components/paginator.html
@@ -5,7 +5,7 @@
 
                 {% for page in pages %}
                 <li class="page-item " >
-                <a class="page-link" href="{% url html_template %}?{% if question%}id={{question.id}}&{% endif %}page={{page}}" > {{page}} </a>
+                <a class="page-link" href="{% url html_template %}?{% if question%}id={{question.id}}&{% endif %}page={{page}}{% if request.GET.mod == 'hot'%}&mod=hot{% endif %}" > {{page}} </a>
                 </li>
                 {% endfor %}
 
