--- a/askme_kamalov/templates/components/login-box.html
+++ b/askme_kamalov/templates/components/login-box.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="user-bar-box">
                   <div>
-                       <div> <a href="{% url 'log_in' %}" >log in</a>  <a href="{% url 'registration' %}" class="log-out">register</a></div>
+                       <div> <a href="{% url 'login' %}" >log in</a>  <a href="{% url 'registration' %}" class="log-out">register</a></div>
                  </div>
 </div>
