--- a/askme_kamalov/templates/ask.html
+++ b/askme_kamalov/templates/ask.html
@@ -1,5 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
+{% load django_bootstrap5 %}
 {% block content %}
 
 <!DOCTYPE html>
@@ -28,32 +29,18 @@
 <body>
 
 <h1>New Question</h1>
-  <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Title</label>
-    <div class="col-sm-10">
-      <input  class="form-control" maxlength="20" placeholder="How to build a moon park ?">
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label class="col-sm-2 col-form-label">Text</label>
-    <div class="col-sm-10">
-      <textarea class="form-control" rows="10" maxlength="500" placeholder="Really how? Have no idea about it"></textarea>
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Tags</label>
-    <div class="col-sm-10">
-      <input  class="form-control" placeholder="moon, park, puzzle">
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label"></label>
+
+    <form method="post">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+      <div class="mb-3 row">
     <div class="col-sm-10">
       <div class="col-auto">
     <button type="submit" class="btn btn-primary mb-3">ASK!</button>
   </div>
     </div>
   </div>
+    </form>
 
 <script src="../static/js/bootstrap.js" ></script>
 </body>
