--- a/askme_kamalov/templates/layouts/base.html
+++ b/askme_kamalov/templates/layouts/base.html
@@ -43,7 +43,7 @@
                 </form>
           </div>
           <div class="col-4">
-              {% if request.GET.auth == 'yes'%}
+              {% if request.user.is_authenticated %}
               {% include 'components/auth-box.html' %}
               {% else %}
               {% include 'components/login-box.html' %}
