--- a/askme_kamalov/templates/login.html
+++ b/askme_kamalov/templates/login.html
@@ -1,39 +1,24 @@
 <{% extends 'layouts/base.html' %}
 {% load static %}
+{% load django_bootstrap5 %}
 {% block content %}
 
 <h1>Log In</h1>
- <div class="wrong-pass">Sorry, wrong password!</div>
+  <form method="post">
+  {% csrf_token %}
+
+  {% bootstrap_form form %}
+
   <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Login</label>
-    <div class="col-sm-10">
-      <input  class="form-control" maxlength="20" placeholder="Enter your login here">
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword">
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label"></label>
+
     <div class="col-sm-10">
       <div class="col-auto">
-          <form class="d-flex" action="{% url 'index' %}?auth=yes">
+          <form class="d-flex" >
               <button type="submit"  class="btn btn-primary mb-3">Log in!</button>
           </form>
      </div>
     </div>
   </div>
-<div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label"></label>
-    <div class="col-sm-10">
-      <div class="col-auto">
-    <div class="create-new-account"><a href="{% url 'registration' %}">create new account</a></div>
-  </div>
-    </div>
-  </div>
-
+  </form>
 
 {% endblock %}
