--- a/askme_kamalov/templates/question.html
+++ b/askme_kamalov/templates/question.html
@@ -1,5 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
+{% load django_bootstrap5 %}
 {% block content %}
 
 {% include 'components/question-item.html' %}
@@ -12,13 +13,16 @@
 
 <hr size="10" width="100%" align="left" color="black">
 
-<div class="mb-3 row">
-      <textarea class="form-control" rows="10" maxlength="500" placeholder="Enter your answer here"></textarea>
-</div>
-<div class="col-sm-10">
+<form method="post">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+      <div class="mb-3 row">
+    <div class="col-sm-10">
       <div class="col-auto">
-    <button type="submit" class="btn btn-primary mb-3">Answer</button>
+    <button type="submit" class="btn btn-primary mb-3">ASK!</button>
   </div>
-</div>
+    </div>
+  </div>
+    </form>
 
 {% endblock %}
