--- a/askme_kamalov/templates/registration.html
+++ b/askme_kamalov/templates/registration.html
@@ -1,53 +1,27 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
+{% load django_bootstrap5 %}
 {% block content %}
 
 <h1>Registration</h1>
- <div class="wrong-pass">Sorry, your email address has been already registered!</div>
-  <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Login</label>
-    <div class="col-sm-10">
-      <input  class="form-control" maxlength="20" placeholder="dr_pepper">
-    </div>
-  </div>
- <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Email</label>
-    <div class="col-sm-10">
-      <input  class="form-control" maxlength="20" placeholder="drpepper@mail.ru">
-    </div>
-  </div>
- <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">NickName</label>
-    <div class="col-sm-10">
-      <input  class="form-control" maxlength="20" placeholder="Dr.Pepper">
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" placeholder="***********" >
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Repeat password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" placeholder="***********">
-    </div>
-  </div>
-<div class="mb-3 row">
+    <form method="post">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    <div class="mb-3 row">
     <label  class="col-sm-2 col-form-label">Upload avatar</label>
     <div class="col-sm-10">
       <input class="form-control" type="file" id="formFile">
     </div>
   </div>
-  <div class="mb-3 row">
+    <div class="mb-3 row">
     <label  class="col-sm-2 col-form-label"></label>
     <div class="col-sm-10">
       <div class="col-auto">
     <button type="submit" class="btn btn-primary mb-3">Register!</button>
   </div>
     </div>
-  </div>
+   </div>
+    </form>
 
 {% endblock %}
 
