--- a/askme_kamalov/templates/settings.html
+++ b/askme_kamalov/templates/settings.html
@@ -1,40 +1,30 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
 {% block content %}
+{% load django_bootstrap5 %}
 
-<h1>Settings: Dr. Pepper</h1>
-  <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Login</label>
-    <div class="col-sm-10">
-      <input  class="form-control" maxlength="20" placeholder="dr_pepper">
-    </div>
-  </div>
- <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Email</label>
-    <div class="col-sm-10">
-      <input  class="form-control" maxlength="20" placeholder="drpepper@mail.ru">
-    </div>
-  </div>
- <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">NickName</label>
-    <div class="col-sm-10">
-      <input  class="form-control" maxlength="20" placeholder="Dr.Pepper">
-    </div>
-  </div>
-<div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label">Upload avatar</label>
-    <div class="col-sm-10">
-       <img src="{% static '/img/cat.jpg' %}" class="settings-user-avatar-image">
-      <input class="form-control" type="file" id="formFile">
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label  class="col-sm-2 col-form-label"></label>
+<h1>Settings: {{user.username}}</h1>
+
+
+    <form method="post" enctype="multipart/form-data" class="form">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    {% if request.user.avatar.url %}
+        <div style="width: 300px">
+            <img src="{{ request.user.avatar.url }}" alt="Profile Avatar" class="w-100"/>
+        </div>
+    {% endif %}
+    <div class="mb-3 row">
     <div class="col-sm-10">
       <div class="col-auto">
     <button type="submit" class="btn btn-primary mb-3">Save</button>
   </div>
     </div>
   </div>
+    </form>
+
+
+
+
 
 {% endblock %}
